fix overflow results bug

--- a/styles.css
+++ b/styles.css
@@ -382,7 +382,7 @@ input[type='range']::-o-range-track {
 
 .example,
 .results {
-  width: 250px;
+  width: 251px;
   background-color: #ffffff27;
   border: 1px solid white;
   border-radius: 20px;
